# syscalls-rust

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: docs.yml  jekyll-gh-pages.yml
doc/: crates.js  search-index.js  src-files.js
doc/src/syscalls_rust/: lib.rs.html
doc/syscalls_rust/: all.html  index.html
doc/syscalls_rust/syscalls/arch64/: fn.brk.html  fn.execve.html  fn.fchmod.html  fn.fcntl.html  fn.flock.html  fn.fork.html  fn.ftruncate.html  fn.getegid.html  fn.getpgrp.html  fn.mount.html  fn.newstat.html  fn.rename.html  fn.umount.html
doc/syscalls_rust/types/: struct.sockaddr.html  type.intptr_t.html  type.pid_t.html
docs/: index.html  settings.html
docs/0.2.6/: index.html
docs/0.2.6/syscalls_rust/syscalls/: index.html
docs/0.2.6/syscalls_rust/types/: type.nlink_t.html  type.size_t.html  type.u_int.html  type.u_short.html
docs/0.2.7/syscalls_rust/: all.html  index.html
docs/0.2.7/syscalls_rust/syscalls/: index.html
docs/0.2.7/syscalls_rust/types/: index.html  struct.Pollfd.html  struct.Stat.html  struct.sockaddr.html  type.gid_t.html  type.intptr_t.html  type.mode_t.html  type.nlink_t.html  (+12 more)
docs/0.2.8/: help.html  search-index.js
docs/0.2.8/syscalls_rust/: all.html  index.html
docs/src/syscalls_rust/: syscalls.rs.html
docs/syscalls_rust/types/: index.html  struct.Pollfd.html  struct.Stat.html  type.mode_t.html  type.off_t.html  type.sa_family_t.html  type.ssize_t.html  type.u_long.html  type.uid_t.html  type.umode_t.html
src/: lib.rs  syscalls.rs  test.rs  types.rs
src/syscalls/: arch64.rs  x64_86.rs
(+210 files in other folders)
