[package]
name = "syscalls-rust"
license-file = "gpl-3.0"
readme = "README.md"
description = "Linux syscalls for rust"
keywords = ["linux", "syscalls", "c", "kernel"]
repository = "https://github.com/CodeOfSomnath/linux-syscalls"
version = "0.1.1"
edition = "2024"


[lib]
name = "syscalls"
crate-type = ["rlib"] 


[features]
default = ["x64_86"]
x64_86 = []

[dependencies]
