[package]
name = "syscalls-rust"
license-file = "LICENSE"
readme = "README.md"
description = "Linux syscalls for rust"
keywords = ["linux", "syscalls", "c", "kernel"]
repository = "https://github.com/CodeOfSomnath/linux-syscalls"
version = "0.1.5"
edition = "2024"



[features]
default = ["x64_86"]
x64_86 = []

[dependencies]
