[package]
name = "syscalls-rust"
license-file = "LICENSE"
readme = "README.md"
description = "Linux syscalls for rust"
keywords = ["linux", "syscalls", "c", "kernel"]
repository = "https://github.com/CodeOfSomnath/linux-syscalls"
version = "0.1.5"
edition = "2024"



[features]
# This features are defined for different architecture.
# if any arch I have missed then raise a issue and tell me about it
default = ["arch64"]
arch32 = [] # x86 64 bit, x32 abi
arch64 = [] # x86 64 bit, x86-64 abi
arm64 = [] # Arm 64 bit, Arch 64 bit
arm32 = [] # Arm 64 bit, Arch 32 bit


[dependencies]
